done with changes

--- a/index.css
+++ b/index.css
@@ -74,19 +74,7 @@ body {
 .about-card{
     background: rgb(190, 197, 201);
 }
- .footer-section{
-    padding-left: 25px;
-    padding-right: 25px;
-    background: #4475C1;
-    font-size: 150%;
-    list-style-type: none;
-
- }
-.github-img {
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-}
+  
 .project-card{
     height: 100%;
     object-fit: cover;
@@ -97,4 +85,32 @@ body {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+ 
+
+.footer-section{
+     background: #4475C1;
+
+}
+        
+.experience-card{
+    display: flex;
+    
+}
+.fab{
+    font-weight: 600;
+    color: white;
+
+}
+.skill-card,.project-card,.experience-card{
+    transition: transform 0.3s ease,box-shadow 0.3s ease;
+    overflow: hidden;
+    justify-content: space-between;
+     
+}
+.skill-card:hover,
+.project-card:hover,
+.experience-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
 }
